Infraestructura/k8s/minikube/local-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: travelhub
